# docqa

./: .dockerignore  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  404.html  Dockerfile  README.md  conftest.py  download_models.py  frontend.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  report.md  requirements-dev.txt  requirements.txt  test_main.py
.github/workflows/: unit-test.yml
docqa/: types.py
docqa/core/: chunking.py  data_generation.py  data_validation.py  demo_pipeline.py  doc_tree.py  markdown.py  retrieval.py
docqa/demo/: config.py  create_dataset.py  finetune_openai.py  pipeline.py
docqa/demo/data/generative_agent/: _train.jsonl  _val.jsonl  doc_tree.json  main+extra-dense-long-instruction.jsonl  main+extra-sparse-long-instruction.jsonl  (+14 more)
docs/: report.md
reference/: index.html
reference/NAV/: index.html
reference/core/: index.html
reference/core/chunking/: index.html
reference/core/data_generation/: index.html
reference/core/data_validation/: index.html
reference/core/doc_tree/: index.html
reference/core/markdown/: index.html
reference/core/retrieval/: index.html
reference/demo/: index.html
reference/demo/config/: index.html
reference/demo/create_dataset/: index.html
reference/demo/finetune_openai/: index.html
reference/demo/pipeline/: index.html
reference/types/: index.html
report/: index.html
scripts/: generate_reference_docs.py
search/: search_index.json
tests/: test_data_generation.py  test_doctree.py  test_markdown.py  test_retrieval.py
tests/assets/: output.json
(+1 files in other folders)
